@@ -1,77 +1,80 @@
 package com.GadgetGrove.order.service;
 
-//import com.GadgetGrove.GadgetGrove.cart.CartItem;
-import com.GadgetGrove.
-import com.GadgetGrove.GadgetGrove.cart.CartItemRepository;
-import com.GadgetGrove.GadgetGrove.user.User;
-import com.GadgetGrove.GadgetGrove.user.UserRepository;
-import com.GadgetGrove.order.dto.OrderItemResponse;
-import com.GadgetGrove.order.dto.OrderRequest;
-import com.GadgetGrove.order.dto.OrderResponse;
+import com.GadgetGrove.order.dto.*;
 import com.GadgetGrove.order.enums.OrderStatus;
 import com.GadgetGrove.order.model.Order;
 import com.GadgetGrove.order.model.OrderItem;
 import com.GadgetGrove.order.repository.OrderRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.reactive.function.client.WebClient;
 
 import java.math.BigDecimal;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class OrderService {
 
     private final OrderRepository orderRepository;
-    private final CartItemRepository cartItemRepository;
-    private final UserRepository userRepository;
+    private final WebClient.Builder webClientBuilder;
+
+    @Value("${product.service.url:http://localhost:8082}")
+    private String productServiceUrl;
 
     @Transactional
     public OrderResponse placeOrder(UUID userId, OrderRequest request) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-
-        List<CartItem> cartItems = cartItemRepository.findByUserId(userId);
-        if (cartItems.isEmpty()) {
-            throw new RuntimeException("Cart is empty");
+        if (request.getOrderItems() == null || request.getOrderItems().isEmpty()) {
+            throw new RuntimeException("Order items cannot be empty");
         }
 
         Order order = new Order();
-        order.setUser(user);
+        order.setUserId(userId);
         order.setShippingAddress(request.getShippingAddress());
         order.setStatus(OrderStatus.PENDING);
 
-        List<OrderItem> orderItems = new ArrayList<>();
-        BigDecimal totalAmount = BigDecimal.ZERO;
+        List<OrderItem> orderItems = request.getOrderItems().stream()
+                .map(itemRequest -> {
+                    ProductResponse product = webClientBuilder.build()
+                            .get()
+                            .uri(productServiceUrl + "/api/products/{id}", itemRequest.getProductId())
+                            .retrieve()
+                            .bodyToMono(ProductResponse.class)
+                            .block();
 
-        for (CartItem cartItem : cartItems) {
-            OrderItem orderItem = new OrderItem();
-            orderItem.setOrder(order);
-            orderItem.setProduct(cartItem.getProduct());
-            orderItem.setQuantity(cartItem.getQuantity());
-            orderItem.setPrice(cartItem.getPrice());
-            orderItems.add(orderItem);
-            totalAmount = totalAmount.add(cartItem.getPrice());
-        }
+                    if (product == null) {
+                        throw new RuntimeException("Product not found: " + itemRequest.getProductId());
+                    }
+                    if (product.getStockQuantity() < itemRequest.getQuantity()) {
+                        throw new RuntimeException("Insufficient stock for product: " + product.getName());
+                    }
+
+                    OrderItem orderItem = new OrderItem();
+                    orderItem.setOrder(order);
+                    orderItem.setProductId(product.getId().toString());
+                    orderItem.setQuantity(itemRequest.getQuantity());
+                    orderItem.setPrice(product.getPrice());
+                    return orderItem;
+                }).collect(Collectors.toList());
 
         order.setOrderItems(orderItems);
+        BigDecimal totalAmount = orderItems.stream()
+                .map(item -> item.getPrice().multiply(BigDecimal.valueOf(item.getQuantity())))
+                .reduce(BigDecimal.ZERO, BigDecimal::add);
         order.setTotalAmount(totalAmount);
 
         Order savedOrder = orderRepository.save(order);
-
-        // Clear the cart after placing order
-        cartItemRepository.deleteAll(cartItems);
-
         return mapToResponse(savedOrder);
     }
 
     private OrderResponse mapToResponse(Order order) {
         OrderResponse response = new OrderResponse();
         response.setId(order.getId());
-        response.setUserId(order.getUser().getId());
+        response.setUserId(order.getUserId());
         response.setTotalAmount(order.getTotalAmount());
         response.setStatus(order.getStatus());
         response.setShippingAddress(order.getShippingAddress());
@@ -80,12 +83,11 @@ public class OrderService {
         List<OrderItemResponse> itemResponses = order.getOrderItems().stream()
                 .map(item -> {
                     OrderItemResponse itemResponse = new OrderItemResponse();
-                    itemResponse.setProductId(item.getProduct().getId());
-                    itemResponse.setProductName(item.getProduct().getName());
+                    itemResponse.setProductId(UUID.fromString(item.getProductId()));
                     itemResponse.setQuantity(item.getQuantity());
                     itemResponse.setPrice(item.getPrice());
                     return itemResponse;
-                }).toList();
+                }).collect(Collectors.toList());
 
         response.setOrderItems(itemResponses);
         return response;
